src/test/deca/context/valid/valid_sans_objet/declaration.deca
// Description:
//    Programme  avec une simple declaration.
//
// Resultats:

{
	int x = 2;
	int y = 3;
	int z;
	z = x + y;
}