src/test/deca/context/invalid/invalid_sans_objet/binaryOP_incompatible_types.deca
// Description:
//    test de programme contextuellement incorrect.
//
// Resultats:
//    Ligne 14 : Erreur.
//    types incompatibles pour l'opperation +.
//
// Historique:
//    cree le 09/01/2021

{
	int x;
	boolean y;
	int z = x + y;
}